--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-jsdoc3": "^0.3.0",
+    "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.9",
     "minimist": "^1.2.0",
     "network-address": "^1.1.0",
